<resources>
    <string name="app_name">FoodHub</string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="homePage">Home</string>
    <string name="favourites">Favourite Restaurants</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQs</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="logout">Logout</string>
    <string name="faq_answer_one">A.1 You will be taught using pre-recorded videos and text tutorials. The training has
        quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project
        to get hands-on practice of what you learn during your training.
    </string>
    <string name="faq_answer_two">A.2 As this is a purely online training program, you can choose to learn at any time
        of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning
        hours can be decided by students according to their convenience.
    </string>
    <string name="faq_answer_four">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours
        can be decided by you as per your convenience.
    </string>
    <string name="faq_answer_three">A.3 The training duration is of 6 weeks.</string>
    <string name="faq_answer_five">A.5 You can choose your preferred batch date while signing up for the training
        program.
    </string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="faq_answer_six">A.6 You will be able to download the certificate once you complete your training and
        take the final test.
    </string>
    <string name="dummy_date">20/12/2018</string>
    <string name="all_restaurants">All Restaurants</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>
</resources>
