<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior = "single">
    <item
        android:id="@+id/restaurantPage"
        android:title="@string/all_restaurants"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favourite"/>

        <item
            android:id="@+id/history"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"/>

    <item
        android:id="@+id/faq"
        android:title="@string/faq"
        android:icon="@drawable/ic_faq"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>